@@ -24,7 +24,7 @@ option "client" c "Act as client." flag on
 option "server" s "Act as server." flag off
 option "client-mechanisms" - "Write name of supported client mechanisms separated by space to stdout." flag off
 option "server-mechanisms" - "Write name of supported server mechanisms separated by space to stdout." flag off
-option "mkpasswd" k "Derive password. Provide --mechanism as SCRAM-SHA-1 or SCRAM-SHA-256.  The required inputs are password (through --password or read from terminal) and optional inputs are iteration count (through --iteration-count, or defaulting to 65536) and salt (through --salt, or generated randomly).  The output is a string of the form \"mech:count:salt:salted-password:server-key:stored-key\" where \"mech\" is the mechanism, \"count\" is the provided or default number of times to hash the password, \"salt\" is the provided or generated base64-encoded salt, \"salted-password\" is the hex-encoded derived password, \"server-key\" and \"stored-key\" are the two base64-encoded derived server-side keys." flag off
+option "mkpasswd" k "Derive password. Provide --mechanism as SCRAM-SHA-1 or SCRAM-SHA-256.  The required inputs are password (through --password or read from terminal) and optional inputs are iteration count (through --iteration-count, or defaulting to 65536) and salt (through --salt, or generated randomly).  The output is a string of the form \"{mech}count,salt,stored-key,server-key[,salted-password]\" where \"mech\" is the mechanism, \"count\" is the number of times password was hashed, \"salt\" is the provided/generated base64-encoded salt, \"stored-key\" and \"server-key\" are the two derived and base64-encoded server-side keys.  When --verbose is provided, \"salted-password\" will be included as the hex-encoded PBKDF2-derived password." flag off
 
 section "Network options"
 option "connect" - "Connect to TCP server and negotiate on stream instead of stdin/stdout. PORT is the protocol service, or an integer denoting the port, and defaults to 143 (imap) if not specified. Also sets the --hostname default." string typestr="HOST[:PORT]" no
